# Invoro

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  audit.md  coderabbit.md  docker-compose.yml  imagehash.md  sonar.md  start.bat  wrangler.json
backend/: Dockerfile  Procfile  harness_support.py  pyproject.toml  pytest.ini  run_acquire_smoke.py  run_alert_smoke.py  run_browser_surface_probe.py  run_extraction_smoke.py  run_google_native_search_smoke.py  run_json_issue_audit.py  run_test_sites_acceptance.py
backend/alembic/versions/: 20260509_0001_baseline_schema.py  20260519_0005_orchestration.py  20260520_0006_agentic_delta_engine.py  20260528_0007_drop_orchestration.py  20260528_0007_drop_projects_feature_tables.py  20260528_0008_playground_sessions.py
backend/app/: main.py  tasks.py
backend/app/api/: alerts.py  api_keys.py  auth.py  crawl_domain.py  crawls.py  data_enrichment.py  llm.py  monitors.py  observability.py  orchestration.py  playground.py  product_intelligence.py  public_alerts.py  records.py  ucp_audit.py
backend/app/core/: celery_app.py  config.py  database.py  dependencies.py  metrics.py  public_auth.py  rate_limit.py  security.py
backend/app/mcp/: __init__.py  alert_server.py
backend/app/mcp_server/: __init__.py  client.py  config.py  server.py  tools.py
backend/app/models/: __init__.py  api_key.py  crawl_run.py  crawl_settings.py  data_enrichment.py  monitor.py  orchestration.py  playground.py  product_intelligence.py  review.py  ucp_audit.py  user.py
backend/app/schemas/: alert.py  api_key.py  crawl.py  llm.py  monitor.py  orchestration.py  playground.py  product_intelligence.py  public_api.py  ucp_audit.py  user.py
backend/app/services/: _batch_runtime.py  alert_service.py  api_key_service.py  auth_service.py  confidence.py  crawl_utils.py  dashboard_service.py  design_system.py  domain_memory_service.py  extraction_context.py  extraction_html_helpers.py  extraction_runtime.py  field_policy.py  field_value_candidates.py  js_state_helpers.py  listing_extractor.py  monitor_alert_rules.py  monitor_alert_service.py  monitor_change_detection.py  monitor_condition.py  monitor_scheduler_service.py  monitor_service.py  monitor_webhook_service.py  network_payload_mapper.py  orchestration_service.py  platform_policy.py  playground_service.py  public_record_firewall.py  record_export_service.py  selector_self_heal.py  selector_suggestions.py  selectors_runtime.py  structured_sources.py  surface_resolver.py
backend/browser_surface_probe/: baseline_probe.js  core.py  report_rendering.py  value_coercion.py
backend/harness/: harness_user.py  support.py
backend/tests/: conftest.py  test_browser_surface_probe.py  test_harness_support.py  test_main.py
backend/tests/component/: test_acquirer.py  test_adapter_jibe.py  test_adapter_oracle_hcm.py  test_adapter_public_job_sources.py  (+49 more)
(+650 files in other folders)
