[build-system]
requires = ["setuptools>=68,<81", "wheel>=0.42,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlerai-backend"
version = "0.1.0"
description = "CrawlerAI POC backend"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.13.5,<4",
  "alembic>=1.16.5,<2",
  "argon2-cffi>=25.1.0,<26",
  "asyncpg>=0.30.0,<1",
  "beautifulsoup4>=4.13.4,<5",
  "cachetools>=5.5.2,<7",
  "celery[redis]>=5.4.0,<6",
  "curl-cffi>=0.14.0,<1",
  "cssselect>=1.3.0,<2",
  "dateparser>=1.2.2,<2",
  "cryptography>=46.0.7,<47",
  "defusedxml>=0.7.1,<1",
  "fastapi>=0.116.0,<1",
  "fastmcp>=2.0.0,<3",
  "email-validator>=2.3.0,<3",
  "httpx[socks]>=0.28.1,<1",
  "glom>=24.11.0,<25",
  "jmespath>=1.0.1,<2",
  "lxml>=6.0.0,<7",
  "passlib[bcrypt]>=1.7.4,<2",
  "patchright>=1.58.2,<2",
  "price-parser>=0.5.0,<1",
  "prometheus-client>=0.23.1,<1",
  "psutil>=7.1.0,<8",
  "pydantic-settings>=2.10.0,<3",
  "python-jose[cryptography]>=3.5.0,<4",
  "python-multipart>=0.0.24,<1",
  "redis>=6.4.0,<7",
  "regex>=2025.9.18,<2027.0.0",
  "selectolax>=0.4.7,<1",
  "sqlalchemy>=2.0.43,<3",
  "structlog>=25.4.0,<26",
  "uvicorn[standard]>=0.35.0,<1",
  "browserforge>=1.2.0,<2",
  "extruct>=0.18.0,<1",
  "w3lib>=2.3.1,<3",
]

[project.optional-dependencies]
# Local/dev environments can use psycopg2-binary to avoid libpq toolchain setup.
# Production should install psycopg2 explicitly (not listed in core dependencies to avoid conflicts).
dev = [
  "hypothesis>=6.0.0,<7",
  "pytest>=8.4.2,<10",
  "pytest-asyncio>=1.1.0,<2",
  "psycopg2-binary>=2.9.10,<3",
  "ruff>=0.1.0,<1",
  "mypy>=1.20.1,<3",
  "types-python-jose>=3.5.0.20260408,<4",
  "types-regex>=2026.4.4.20260408,<2027.0.0",
  "lxml-stubs>=0.5.1,<1",
  "types-jmespath>=1.1.0.20260408,<2",
  "types-cachetools>=6.2.0.20260408,<7",
  "types-passlib>=1.7.7.20260211,<2",
  "pylint>=4.0.5,<5",
  "basedpyright>=1.39.2,<2",
  "bandit>=1.9.4,<2",
  "vulture>=2.16,<3",
  "radon>=6.0.1,<7",
]
prod = [
  "psycopg2>=2.9.10,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pylint.main]
ignore-paths = [
  "^tests/.*$",
  "^alembic/.*$",
]

[tool.pylint.messages_control]
disable = [
  "import-error",
  "no-name-in-module",
  "line-too-long",
  "missing-module-docstring",
  "missing-class-docstring",
  "fixme",
]

[tool.pylint.design]
max-args = 8
max-branches = 12
max-locals = 15
max-returns = 8
max-statements = 50
max-attributes = 12
max-public-methods = 24
max-module-lines = 1000

[tool.pylint.similarities]
min-similarity-lines = 5

[tool.vulture]
min_confidence = 100

[tool.mypy]
python_version = "3.12"
exclude = ["tests", "alembic", "\\.venv"]

[[tool.mypy.overrides]]
module = [
  "celery",
  "celery.*",
  "glom",
  "extruct",
  "defusedxml",
]
ignore_missing_imports = true
